--- a/project-3/src/Customers/Customer.css
+++ b/project-3/src/Customers/Customer.css
@@ -1,8 +1,10 @@
 .ellipse {
-    width: 500px;
-    height: 250px;
+    width: 30vw;
+    height: 25vh;
     background-color: white;
     border-radius: 50%;
+    border: 1vh;
+    border-style: solid;
     border-color: black;
     display: flex;
     align-items: center;
@@ -10,5 +12,4 @@
     color: black;
     font-size: 42px;
     text-align: center;
-
 }
