--- a/project-3/src/Customers/Customer.css
+++ b/project-3/src/Customers/Customer.css
@@ -13,3 +13,83 @@
     font-size: 42px;
     text-align: center;
 }
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+
+.orderbox {
+    width: 18vw;
+    height: 80vh;
+    background-color: white;
+    border-radius: 30px;
+    border: 3px;
+    border-style: solid;
+    border-color: black;
+    flex: 0 1 auto;
+}
+
+.addonbox {
+    width: 25vw;
+    height: 95vh;
+    background-color: white;
+    border-radius: 30px;
+    border: 3px;
+    border-style: solid;
+    border-color: black;
+    flex: 0 1 auto;
+}
+
+.mealbox {
+    width: 50vw;
+    height: 80vh;
+    background-color: white;
+    border-radius: 30px;
+    border: 3px;
+    border-style: solid;
+    border-color: black;
+
+    flex: 0 1 auto;
+    margin: 0 20px;
+    text-align: center;
+}
+
+.backbutton {
+    width: 9vw;
+    height: 5vh;
+    background-color: white;
+    border-radius: 10px;
+    border: 3px;
+    border-style: solid;
+    border-color: black;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    color: black;
+    align-content: left;
+}
+
+.completeorderbutton {
+    width: 9vw;
+    height: 5vh;
+    background-color: white;
+    border-radius: 20px;
+    border: 3px;
+    border-style: solid;
+    border-color: black;;
+    color: black;
+    align-content: left;
+    
+    margin: 20px 0;
+}
+
+.left-inner {
+    display: flex;
+    flex-direction: column;         /* Arrange items vertically */
+    gap: 10px;                      /* Space between each item */
+}
