Added hover animation to listed order items

--- a/project-3/src/Cashiers/CashierSubmitScreen.css
+++ b/project-3/src/Cashiers/CashierSubmitScreen.css
@@ -25,6 +25,12 @@
     padding: 10px;
 }
 
+.pay-order-list li:hover {
+    background-color: gray;
+    transition: 0.1s;
+    cursor: pointer;
+}
+
 .back-button {
     display: flex;
     justify-content: center;
