--- a/project-3/src/Cashiers/CashierHome.css
+++ b/project-3/src/Cashiers/CashierHome.css
@@ -25,6 +25,12 @@
     padding: 10px;
 }
 
+.order-list li:hover {
+    background-color: gray;
+    transition: 0.1s;
+    cursor: pointer;
+}
+
 .buttons {
     align-items: flex-start;
     display: flex;
