--- a/project-3/src/Managers/CreateOrderStyle.css
+++ b/project-3/src/Managers/CreateOrderStyle.css
@@ -1,13 +1,18 @@
-.employeePageContainer {
+.CreateOrderContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 98vw;
     height: 100vh;
-    
 }
 
+.body-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
 
 .tableContainer {
     width: 80%;
@@ -19,9 +24,6 @@
     background-color: white;
     flex-shrink: 0;
     margin-top: 1%;
-   
-    
-    
 }
 .table-header {
     display: flex; /* Flex layout for the header */
@@ -51,52 +53,6 @@ tbody tr:hover {
     background-color: #f1f1f1; /* Highlight row on hover */
 }
 
-.buttonContainer {
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    max-width: 80%;
-    height: 10%;
-    margin: auto;
-}
-
-.buttonContainer button {
-    width:20%;
-}
-
-.x {
-    width: 15%;
-    height: 50%;
-    text-align: center;
-    
-}
-
-.addPopUp {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.addContent {
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-    text-align: center;
-    width: 25%;
-    height: 25%;
-}
-
-.addHeader {
-    display: flex;
-
+.submit {
+    width: 20%;
 }
